Fix bugs: Flash of topbar. JS NPE. Uploaded images not readable.

--- a/client/app/topbar/topbar.styl
+++ b/client/app/topbar/topbar.styl
@@ -18,6 +18,7 @@
 $topbarButtonPaddingTop = 7px
 
 html:not(.dw-react-started)
+  .esTopbar_ancestors,
   #dw-topbar-btns
     visibility: hidden;  // display:none not good, because then other elems too close
 
